@@ -7,6 +7,6 @@ Name: libmongo-client
 Version: @VERSION@
 Description: MongoDB client library
 URL: https://github.com/algernon/libmongo-client
-Requires.private: glib-2.0 @openssl_pc@
+Requires.private: glib-2.0
 Libs: -L${libdir} -lmongo-client
 Cflags: -I${includedir}/mongo-client
