@@ -6,7 +6,6 @@
 #include <sys/socket.h>
 #include "libmongo-private.h"
 
-#if ENABLE_AUTH
 void
 test_mongo_sync_cmd_authenticate_net_secondary (void)
 {
@@ -111,18 +110,3 @@ test_mongo_sync_cmd_authenticate (void)
 }
 
 RUN_TEST (17, mongo_sync_cmd_authenticate);
-#else
-void
-test_mongo_sync_cmd_authenticate  (void)
-{
-  errno = 0;
-  if (mongo_sync_cmd_authenticate (NULL, NULL, NULL, NULL) != FALSE)
-    fail ("mongo_sync_authenticate() with NULLs should fail");
-  else
-    ok (errno == ENOTSUP,
-	"mongo_sync_authenticate() should fail with ENOTSUP "
-	"when authentication is not compiled in");
-}
-
-RUN_TEST (1, mongo_sync_cmd_authenticate);
-#endif
