@@ -6,7 +6,6 @@
 #include <sys/socket.h>
 #include "libmongo-private.h"
 
-#if ENABLE_AUTH
 void
 test_mongo_sync_cmd_user_remove_net_secondary (void)
 {
@@ -91,18 +90,3 @@ test_mongo_sync_cmd_user_remove (void)
 }
 
 RUN_TEST (10, mongo_sync_cmd_user_remove);
-#else
-void
-test_mongo_sync_cmd_user_remove  (void)
-{
-  errno = 0;
-  if (mongo_sync_cmd_user_remove (NULL, NULL, NULL) != FALSE)
-    fail ("mongo_sync_user_remove() with NULLs should fail");
-  else
-    ok (errno == ENOTSUP,
-	"mongo_sync_user_remove() should fail with ENOTSUP when "
-	"authentication is not compiled in");
-}
-
-RUN_TEST (1, mongo_sync_cmd_user_remove);
-#endif
